[package]
name = "hyper-mem-leak"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = [
    "client", "client-legacy", "server", "http1", "http2", "tokio"
] }
tokio = { version = "1.51.0", features = ["full"] }